tests/error/comptime/compare_pointers9.bz
// error: invalid pointer comparison
// note: while evaluating expression at compile time
// note: lhs and rhs addresses point to objects in this allocation, which was freed
// note: allocation was made while evaluating expression at compile time
// note: allocation was freed here
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let p = __builtin_comptime_malloc(i32, 3);
		let q = p + 2;
		__builtin_comptime_free(p);

		p < q;
	});
}
